# capitalize

./: README.md  pyproject.toml
capitalize/: cap_script.py  capital_mod.py  main.py
test/: test_capital_mod.py
tests/: test_capital_mod.py
